Remove duplicate width/height/fps from operator configs
Signed-off-by: cdinea <cdinea@nvidia.com>

--- a/applications/video_streaming/video_streaming_server/cpp/streaming_server_demo.yaml
+++ b/applications/video_streaming/video_streaming_server/cpp/streaming_server_demo.yaml
@@ -39,16 +39,20 @@ streaming_server:
   allocator: !ref "allocator"
 
 # Upstream operator configuration (receives frames from clients)
-upstream_op:
-  width: 854
-  height: 480
-  fps: 30
+# Note: width, height, fps are inherited from streaming_server resource
+# Uncomment below to override resource defaults per-operator
+upstream_op: {}
+  # width: 854
+  # height: 480
+  # fps: 30
 
-# Downstream operator configuration (sends frames to clients)  
-downstream_op:
-  width: 854
-  height: 480
-  fps: 30
+# Downstream operator configuration (sends frames to clients)
+# Note: width, height, fps are inherited from streaming_server resource
+# Uncomment below to override resource defaults per-operator
+downstream_op: {}
+  # width: 854
+  # height: 480
+  # fps: 30
 
 # Memory allocator configuration
 allocator:
