App: Fix object_detection_torch torchvision CUDA 12 installation
Address issue on x86_64 CUDA 12 platforms where the object_detection_torch
application runtime failed:
```
[error] [holoinfer_constants.hpp:83] Inference manager, Error in inference execution: argument not found
[error] [gxf_wrapper.cpp:136] Exception occurred for operator: 'detect_inference' - Error in Inference Operator, Sub-module->Compute, Inference execution, Message->Error in Inference Operator, Sub-module->Compute, Inference execution, Inference manager, Error in inference execution: argument not found

```

Follows previous fix in 61c98ae1b6248bacbd59ce92d32c67df5f1301aa where
torchvision symbols must be eagerly loaded in order to load the
application FRCNN model. Requires torchvision built for CUDA.

Signed-off-by: Tom Birdsong <tbirdsong@nvidia.com>

--- a/applications/object_detection_torch/Dockerfile
+++ b/applications/object_detection_torch/Dockerfile
@@ -42,9 +42,9 @@ FROM base as torch
 
 # Install libraries
 ARG GPU_TYPE
-RUN TORCHVISION_WHEEL_VERSION="0.23.0"; \
-    if [ "${GPU_TYPE}" = "igpu" ]; then \
+RUN if [ "${GPU_TYPE}" = "igpu" ]; then \
         PYTORCH_WHEEL_VERSION="2.8.0"; \
+        TORCHVISION_WHEEL_VERSION="0.23.0"; \
         INDEX_URL="https://pypi.jetson-ai-lab.io/jp6/cu129"; \
     else \
         CUDA_MAJOR=$(nvcc --version | grep -o "release [0-9]*" | awk '{print $2}'); \
@@ -61,6 +61,7 @@ RUN TORCHVISION_WHEEL_VERSION="0.23.0"; \
                 fi; \
         else \
             PYTORCH_WHEEL_VERSION="2.8.0+cu129"; \
+            TORCHVISION_WHEEL_VERSION="0.23.0+cu129"; \
             INDEX_URL="https://download.pytorch.org/whl/"; \
         fi; \
     fi; \
