--- a/applications/video_streaming/video_streaming_client/CMakeLists.txt
+++ b/applications/video_streaming/video_streaming_client/CMakeLists.txt
@@ -14,11 +14,12 @@
 # limitations under the License.
 
 cmake_minimum_required(VERSION 3.20)
-project(video_streaming_client LANGUAGES NONE)
+project(video_streaming_client LANGUAGES CXX)
 
 # Add C++ subdirectory
 add_subdirectory(cpp)
 
+# Add Python subdirectory
 if(HOLOHUB_BUILD_PYTHON)
   add_subdirectory(python)
 endif()
