Benchmarks/rt threads cpp (#1136)
Enhance and Simplify Real-time Threads Benchmarking

Overview
This PR significantly improves the real-time threads benchmarking tool
by consolidating it to a single C++ implementation while enhancing
functionality and usability. The changes provide a streamlined
experience with automatic plot generation and comprehensive real-time
scheduling analysis.

Key Changes
- Move from Python implementation to C++ implementation
- Improved Configuration
- Updated load-intensity to separate bg-load-intensity/bg-workload-size
and bm-load-intensity/bm-workload-size
  - Added argument for specifying dummy load parameters
- Update Output
  - Focus on Frame Period Standard Deviation in output
  - Reformatted output logs for better readability
- Updated documentation

<!-- greptile_comment -->

<h2>Greptile Overview</h2>

Updated On: 2025-10-20 14:23:35 UTC

### Greptile Summary

This PR replaces the Python-based real-time thread benchmarking tool
with a C++ implementation to provide lower overhead, more precise timing
measurements, and integrated plotting capabilities. The implementation
creates a Holoscan application with benchmark and dummy load operators
that measure frame period consistency under different Linux scheduling
policies (normal, SCHED_DEADLINE, SCHED_FIFO, SCHED_RR). The
configuration has been refactored to separate background load parameters
(`bg-load-intensity`, `bg-workload-size`) from benchmark load parameters
(`bm-load-intensity`, `bm-workload-size`), providing finer-grained
control over test conditions. The tool outputs JSON-formatted statistics
focusing on frame period standard deviation, then automatically invokes
a Python plotting script to generate visualization graphs. This change
aligns with Holoscan's C++ core and provides direct access to real-time
scheduling primitives without Python GIL overhead.

<details>
<summary>Changed Files</summary>

| Filename | Score | Overview |
|----------|-------|----------|
| benchmarks/

--- a/benchmarks/realtime_threads_benchmarking/CMakeLists.txt
+++ b/benchmarks/realtime_threads_benchmarking/CMakeLists.txt
@@ -13,10 +13,31 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-file(RELATIVE_PATH app_relative_dest_path ${CMAKE_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR})
+cmake_minimum_required(VERSION 3.20)
+project(realtime_thread_benchmarking CXX)
 
-add_custom_target(python_realtime_threads_benchmark ALL
-  COMMAND ${CMAKE_COMMAND} -E copy "${CMAKE_CURRENT_SOURCE_DIR}/realtime_thread_benchmark.py" ${CMAKE_CURRENT_BINARY_DIR}
-  DEPENDS "realtime_thread_benchmark.py"
-  BYPRODUCTS "realtime_thread_benchmark.py"
+find_package(holoscan 3.5 REQUIRED CONFIG
+             PATHS "/opt/nvidia/holoscan" "/workspace/holoscan-sdk/install")
+
+# Create the benchmark executable
+add_executable(realtime_thread_benchmark
+  realtime_thread_benchmark.cpp
+)
+
+# Link against Holoscan
+target_link_libraries(realtime_thread_benchmark
+  holoscan::core
+)
+
+# Set C++ standard
+target_compile_features(realtime_thread_benchmark PRIVATE cxx_std_17)
+
+# Copy plotting script to build directory
+configure_file(${CMAKE_CURRENT_SOURCE_DIR}/plot_results.py
+               ${CMAKE_CURRENT_BINARY_DIR}/plot_results.py
+               COPYONLY)
+
+# Install the executable
+install(TARGETS realtime_thread_benchmark
+  RUNTIME DESTINATION bin
 )
