Update documentation and add 'Run Locally' feature for applications
- Modified README.md to swap the commands for running the C++ and Python versions of the slang_gamma_correction application.
- Enhanced mkdocs.yml to include a new JavaScript file for the 'Run Locally' button functionality.
- Introduced a new CSS style for the 'Run Locally' button and modal, improving the user interface.
- Added JavaScript logic to dynamically create a modal for running applications locally, including copy functionality for commands.
- Updated the generate_pages.py script to create the 'Run Locally' button in the documentation for applications, along with links to alternative language versions if available.

This update aims to streamline the user experience by providing clear instructions and interactive elements for running applications locally.

Signed-off-by: B Hashemian <3968947+bhashemian@users.noreply.github.com>

--- a/doc/website/mkdocs.yml
+++ b/doc/website/mkdocs.yml
@@ -47,8 +47,14 @@ extra_css:
   - assets/css/custom-material.css
   - assets/css/jupyter-themes.css
 
+extra_javascript:
+  - assets/js/run-locally.js
+
 plugins:
-  - search
+  - search:
+      indexing: 'full'
+      boost:
+        title: 5
 #  - git-revision-date-localized:
 #      fallback_to_build_date: true
   - gen-files:
