Fix realsense visualization application
Adding missing packages needed by new version of librealsense2

--- a/applications/realsense_visualizer/Dockerfile
+++ b/applications/realsense_visualizer/Dockerfile
@@ -41,7 +41,9 @@ RUN apt update \
     && apt install --no-install-recommends -y \
         librealsense2-dev \
         libudev-dev \
-        libusb-1.0-0-dev
+        libusb-1.0-0-dev \
+        libfastcdr-dev \
+        libfastrtps-dev
 
 # --------------------------------------------------------------------------
 #
