--- a/operators/realsense_camera/CMakeLists.txt
+++ b/operators/realsense_camera/CMakeLists.txt
@@ -1,4 +1,4 @@
-# SPDX-FileCopyrightText: Copyright (c) 2024 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
+# SPDX-FileCopyrightText: Copyright (c) 2024-2025 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
 # SPDX-License-Identifier: Apache-2.0
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
@@ -17,6 +17,10 @@ project(realsense_camera)
 
 find_package(holoscan 2.1 REQUIRED CONFIG
              PATHS "/opt/nvidia/holoscan" "/workspace/holoscan-sdk/install")
+
+# Required for RealSense2 package
+find_package(fastrtps REQUIRED)
+find_package(fastcdr REQUIRED)
 
 find_package(realsense2 REQUIRED)
 
