Update Dockerfile to include onnxscript dependency (#1195)
Added the `onnxscript` package to the pip install command in the
Dockerfile for the depth_anything_v2 application to resolve module
import issues and ensure compatibility with the latest ONNX features.

<!-- This is an auto-generated comment: release notes by coderabbit.ai
-->
## Summary by CodeRabbit

* **Chores**
* Build dependencies updated: added an additional ONNX processing
library (onnxscript) alongside existing ONNX tools for the Depth
Anything V2 application.
<!-- end of auto-generated comment: release notes by coderabbit.ai -->

---------

Signed-off-by: Julien Jomier <jjomier@nvidia.com>
Signed-off-by: Julien Jomier <219040+jjomier@users.noreply.github.com>
Signed-off-by: Bruce Hashemian <3968947+bhashemian@users.noreply.github.com>
Co-authored-by: greptile-apps[bot] <165735046+greptile-apps[bot]@users.noreply.github.com>
Co-authored-by: Bruce Hashemian <3968947+bhashemian@users.noreply.github.com>
Signed-off-by: eagostini <eagostini@nvidia.com>

--- a/applications/depth_anything_v2/Dockerfile
+++ b/applications/depth_anything_v2/Dockerfile
@@ -1,6 +1,6 @@
 # syntax=docker/dockerfile:1
 
-# SPDX-FileCopyrightText: Copyright (c) 2024 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
+# SPDX-FileCopyrightText: Copyright (c) 2024-2025 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
 # SPDX-License-Identifier: Apache-2.0
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
@@ -45,7 +45,7 @@ RUN git clone --depth 1 https://github.com/DepthAnything/Depth-Anything-V2.git \
     && mv depth-anything-tensorrt/depth_anything_v2/dpt.py Depth-Anything-V2/depth_anything_v2 \
     && mv depth-anything-tensorrt/depth_anything_v2/export_v2.py Depth-Anything-V2
 
-RUN pip install onnx onnx-graphsurgeon \
+RUN pip install onnx onnx-graphsurgeon onnxscript \
     && pip install -r Depth-Anything-V2/requirements.txt
 
 # Change to the repository directory
