--- a/operators/video_streaming/streaming_client_enhanced/python/tests/CMakeLists.txt
+++ b/operators/video_streaming/streaming_client_enhanced/python/tests/CMakeLists.txt
@@ -59,3 +59,24 @@ else()
     message(STATUS "To install pytest: pip install pytest")
 endif()
 
+# Add pytest-based unit tests for Python bindings
+# Note: Always add the test, even if pytest check fails at CMake time
+# pytest should be available at test runtime
+add_test(
+    NAME streaming_client_enhanced_pytest
+    COMMAND ${Python3_EXECUTABLE} -m pytest 
+            -v 
+            --tb=short
+            ${CMAKE_CURRENT_SOURCE_DIR}
+    WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
+)
+
+# Set test environment with PYTHONPATH
+set_tests_properties(streaming_client_enhanced_pytest PROPERTIES
+    ENVIRONMENT "PYTHONPATH=${CMAKE_BINARY_DIR}/python/lib:$ENV{PYTHONPATH}"
+    TIMEOUT 120
+    LABELS "pytest;python;bindings;streaming_client"
+)
+
+message(STATUS "StreamingClientOp Python binding tests (pytest) configured.")
+
