fix: remove duplicate test registration in CMakeLists.txt Signed-off-by: cdinea <cdinea@nvidia.com>

--- a/operators/video_streaming/streaming_server_enhanced/python/tests/CMakeLists.txt
+++ b/operators/video_streaming/streaming_server_enhanced/python/tests/CMakeLists.txt
@@ -35,28 +35,8 @@ execute_process(
 if(pytest_available EQUAL 0)
     string(STRIP "${pytest_version}" pytest_version)
     message(STATUS "Found pytest: ${pytest_version}")
-    
-    # Add pytest-based unit tests for Python bindings
-    add_test(
-        NAME streaming_server_enhanced_pytest
-        COMMAND ${Python3_EXECUTABLE} -m pytest 
-                -v 
-                --tb=short
-                ${CMAKE_CURRENT_SOURCE_DIR}
-        WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
-    )
-    
-    # Set test environment with PYTHONPATH
-    set_tests_properties(streaming_server_enhanced_pytest PROPERTIES
-        ENVIRONMENT "PYTHONPATH=${CMAKE_BINARY_DIR}/python/lib:$ENV{PYTHONPATH}"
-        TIMEOUT 120
-        LABELS "pytest;python;bindings;streaming_server"
-    )
-    
-    message(STATUS "StreamingServerOps Python binding tests (pytest) configured.")
 else()
-    message(WARNING "pytest not found. Python binding tests will be skipped.")
-    message(STATUS "To install pytest: pip install pytest")
+    message(WARNING "pytest not found at CMake time, but will be checked at test runtime.")
 endif()
 
 # Add pytest-based unit tests for Python bindings
