fix: use  add_python_tests() CMake function
Signed-off-by: cdinea <cdinea@nvidia.com>

--- a/operators/video_streaming/streaming_client_enhanced/CMakeLists.txt
+++ b/operators/video_streaming/streaming_client_enhanced/CMakeLists.txt
@@ -292,20 +292,12 @@ if(BUILD_TESTING)
     add_subdirectory(tests)
     
     # Python binding tests (pytest)
-    # Run pytest on the python bindings tests directory
-    add_test(
-        NAME streaming_client_enhanced_pytest
-        COMMAND python3 -m pytest 
-                -v 
-                --tb=short
-                python/tests
+    # Use the official add_python_tests() function from holohub cmake modules
+    include(${HOLOHUB_CMAKE_DIR}/modules/add_python_tests.cmake)
+    add_python_tests(
+        INPUT "python/tests"
         WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
-    )
-    
-    # Set test properties with PYTHONPATH
-    set_tests_properties(streaming_client_enhanced_pytest PROPERTIES
-        ENVIRONMENT "PYTHONPATH=${CMAKE_BINARY_DIR}/python/lib:$ENV{PYTHONPATH}"
-        TIMEOUT 300
-        LABELS "pytest;python;bindings;streaming_client"
+        PREFIX "streaming_client_enhanced_pytest"
+        PYTEST_ARGS "-v" "--tb=short"
     )
 endif()
