fix: correct path to add_python_tests.cmake module
Signed-off-by: cdinea <cdinea@nvidia.com>

--- a/operators/video_streaming/streaming_client_enhanced/CMakeLists.txt
+++ b/operators/video_streaming/streaming_client_enhanced/CMakeLists.txt
@@ -293,7 +293,7 @@ if(BUILD_TESTING)
     
     # Python binding tests (pytest)
     # Use the official add_python_tests() function from holohub cmake modules
-    include(${HOLOHUB_CMAKE_DIR}/modules/add_python_tests.cmake)
+    include(${CMAKE_CURRENT_SOURCE_DIR}/../../../cmake/modules/add_python_tests.cmake)
     add_python_tests(
         INPUT "python/tests"
         WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
