fix: add HOLOHUB_BUILD_PYTHON guard to pytest test registration
Signed-off-by: cdinea <cdinea@nvidia.com>

--- a/operators/video_streaming/streaming_server_enhanced/CMakeLists.txt
+++ b/operators/video_streaming/streaming_server_enhanced/CMakeLists.txt
@@ -217,11 +217,13 @@ if(BUILD_TESTING)
     # C++ unit tests
     add_subdirectory(tests)
 
-    # Python binding tests (pytest)
-    add_python_tests(
-        INPUT "python/tests"
-        WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
-        PREFIX "streaming_server_enhanced_pytest"
-        PYTEST_ARGS "-v" "--tb=short"
-    )
+    # Python binding tests (pytest) - only if Python bindings are built
+    if(HOLOHUB_BUILD_PYTHON)
+        add_python_tests(
+            INPUT "python/tests"
+            WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
+            PREFIX "streaming_server_enhanced_pytest"
+            PYTEST_ARGS "-v" "--tb=short"
+        )
+    endif()
 endif()
