--- a/operators/video_streaming/streaming_client_enhanced/CMakeLists.txt
+++ b/operators/video_streaming/streaming_client_enhanced/CMakeLists.txt
@@ -293,11 +293,13 @@ if(BUILD_TESTING)
     # C++ unit tests
     add_subdirectory(tests)
     
-    # Python binding tests (pytest)
-    add_python_tests(
-        INPUT "python/tests"
-        WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
-        PREFIX "streaming_client_enhanced_pytest"
-        PYTEST_ARGS "-v" "--tb=short"
-    )
+    # Python binding tests (pytest) - only if Python bindings are built
+    if(HOLOHUB_BUILD_PYTHON)
+        add_python_tests(
+            INPUT "python/tests"
+            WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
+            PREFIX "streaming_client_enhanced_pytest"
+            PYTEST_ARGS "-v" "--tb=short"
+        )
+    endif()
 endif()
