make video streaming client op/app to build independently
Signed-off-by: B Hashemian <3968947+bhashemian@users.noreply.github.com>

--- a/applications/CMakeLists.txt
+++ b/applications/CMakeLists.txt
@@ -140,6 +140,8 @@ add_holohub_application(video_deidentification)
 add_holohub_application(video_streaming DEPENDS
                         OPERATORS video_streaming)
 
+add_subdirectory(video_streaming)
+
 add_holohub_application(webrtc_video_server)
 
 add_holohub_application(yolo_model_deployment)
