--- a/applications/video_streaming/video_streaming_client/CMakeLists.txt
+++ b/applications/video_streaming/video_streaming_client/CMakeLists.txt
@@ -13,8 +13,22 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-cmake_minimum_required(VERSION 3.20)
-project(video_streaming_client LANGUAGES CXX)
+
+# Download the endoscopy sample data (required for replayer mode)
+if(HOLOHUB_DOWNLOAD_DATASETS)
+  include(holoscan_download_data)
+  holoscan_download_data(endoscopy
+    URL nvidia/clara-holoscan/holoscan_endoscopy_sample_data:20230222
+    DOWNLOAD_NAME holoscan_endoscopy_sample_data_20230222.zip
+    DOWNLOAD_DIR ${HOLOHUB_DATA_DIR}
+    GENERATE_GXF_ENTITIES
+    GXF_ENTITIES_HEIGHT 480
+    GXF_ENTITIES_WIDTH 854
+    GXF_ENTITIES_CHANNELS 3
+    GXF_ENTITIES_FRAMERATE 30
+    ALL
+  )
+endif()
 
 # Add C++ subdirectory
 add_subdirectory(cpp)
