--- a/operators/video_streaming/video_streaming_client/CMakeLists.txt
+++ b/operators/video_streaming/video_streaming_client/CMakeLists.txt
@@ -14,7 +14,7 @@
 # limitations under the License.
 
 cmake_minimum_required(VERSION 3.20)
-project(streaming_client)
+project(video_streaming_client)
 
 # Find Holoscan - use simple approach
 find_package(holoscan 3.2 REQUIRED CONFIG
@@ -66,22 +66,22 @@ find_library(Poco_LIBRARY
 message(STATUS "StreamingClient operator using direct library linking")
 
 # Define the operator as a library
-add_library(streaming_client
+add_library(video_streaming_client
   SHARED
-  streaming_client.cpp
+  video_streaming_client.cpp
 )
 
-add_library(holoscan::ops::streaming_client_enhanced ALIAS streaming_client)
+add_library(holoscan::ops::video_streaming_client ALIAS video_streaming_client)
 
 # Set C++ standard
-set_target_properties(streaming_client PROPERTIES
+set_target_properties(video_streaming_client PROPERTIES
   CXX_STANDARD 17
   CXX_STANDARD_REQUIRED ON
   POSITION_INDEPENDENT_CODE ON
 )
 
 # Set up include directories
-target_include_directories(streaming_client
+target_include_directories(video_streaming_client
   PUBLIC
   $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
   $<BUILD_INTERFACE:${STREAMINGCLIENT_DIR}/include>
@@ -90,7 +90,7 @@ target_include_directories(streaming_client
 )
 
 # Link against StreamingClient and Holoscan using direct libraries (like server does)
-target_link_libraries(streaming_client
+target_link_libraries(video_streaming_client
   PUBLIC
   holoscan::core
   ${StreamingClient_LIBRARY}
@@ -105,7 +105,7 @@ target_link_libraries(streaming_client
 )
 
 # Add linking options to ensure all symbols are resolved
-target_link_options(streaming_client PRIVATE
+target_link_options(video_streaming_client PRIVATE
   "-Wl,--no-as-needed"
   "-Wl,--allow-shlib-undefined"
   "-Wl,--copy-dt-needed-entries"
@@ -113,49 +113,49 @@ target_link_options(streaming_client PRIVATE
 )
 
 # Set RPATH settings - ensure all libraries can be found at runtime, system libs first
-set_target_properties(streaming_client PROPERTIES
+set_target_properties(video_streaming_client PROPERTIES
   SKIP_BUILD_RPATH FALSE
   BUILD_WITH_INSTALL_RPATH FALSE
-  BUILD_RPATH "/usr/lib/${CMAKE_SYSTEM_PROCESSOR}-linux-gnu:${CMAKE_BINARY_DIR}/lib:${CMAKE_BINARY_DIR}/operators/streaming_client:${STREAMINGCLIENT_DIR}/lib/${ARCH_DIR}"
+  BUILD_RPATH "/usr/lib/${CMAKE_SYSTEM_PROCESSOR}-linux-gnu:${CMAKE_BINARY_DIR}/lib:${CMAKE_BINARY_DIR}/operators/video_streaming_client:${STREAMINGCLIENT_DIR}/lib/${ARCH_DIR}"
   INSTALL_RPATH "/usr/lib/${CMAKE_SYSTEM_PROCESSOR}-linux-gnu:$ORIGIN:$ORIGIN/lib:$ORIGIN/../lib:$ORIGIN/../../lib:${CMAKE_INSTALL_PREFIX}/lib:/opt/nvidia/holoscan/lib:${STREAMINGCLIENT_DIR}/lib/${ARCH_DIR}"
   INSTALL_RPATH_USE_LINK_PATH TRUE
 )
 
 # Copy the operator library to the application directory and ensure ALL dependencies are available
-add_custom_command(TARGET streaming_client POST_BUILD
+add_custom_command(TARGET video_streaming_client POST_BUILD
   COMMAND ${CMAKE_COMMAND} -E make_directory
-  ${CMAKE_BINARY_DIR}/operators/streaming_client
+  ${CMAKE_BINARY_DIR}/operators/video_streaming_client
   COMMAND ${CMAKE_COMMAND} -E copy_if_different
-  $<TARGET_FILE:streaming_client>
-  ${CMAKE_BINARY_DIR}/operators/streaming_client/libstreaming_client.so
+  $<TARGET_FILE:video_streaming_client>
+  ${CMAKE_BINARY_DIR}/operators/video_streaming_client/libvideo_streaming_client.so
   # Copy ALL required streaming libraries to ensure runtime availability
   COMMAND ${CMAKE_COMMAND} -E copy_if_different
   ${STREAMINGCLIENT_DIR}/lib/${ARCH_DIR}/libStreamingClient.so
-  ${CMAKE_BINARY_DIR}/operators/streaming_client/libStreamingClient.so
+  ${CMAKE_BINARY_DIR}/operators/video_streaming_client/libStreamingClient.so
   COMMAND ${CMAKE_COMMAND} -E copy_if_different
   ${STREAMINGCLIENT_DIR}/lib/${ARCH_DIR}/libNvStreamingSession.so
-  ${CMAKE_BINARY_DIR}/operators/streaming_client/libNvStreamingSession.so
+  ${CMAKE_BINARY_DIR}/operators/video_streaming_client/libNvStreamingSession.so
   COMMAND ${CMAKE_COMMAND} -E copy_if_different
   ${STREAMINGCLIENT_DIR}/lib/${ARCH_DIR}/libNvStreamBase.so
-  ${CMAKE_BINARY_DIR}/operators/streaming_client/libNvStreamBase.so
+  ${CMAKE_BINARY_DIR}/operators/video_streaming_client/libNvStreamBase.so
   COMMAND ${CMAKE_COMMAND} -E copy_if_different
   ${STREAMINGCLIENT_DIR}/lib/${ARCH_DIR}/libStreamClientShared.so
-  ${CMAKE_BINARY_DIR}/operators/streaming_client/libStreamClientShared.so
+  ${CMAKE_BINARY_DIR}/operators/video_streaming_client/libStreamClientShared.so
   COMMAND ${CMAKE_COMMAND} -E copy_if_different
   ${STREAMINGCLIENT_DIR}/lib/${ARCH_DIR}/libPoco.so
-  ${CMAKE_BINARY_DIR}/operators/streaming_client/libPoco.so
+  ${CMAKE_BINARY_DIR}/operators/video_streaming_client/libPoco.so
   COMMAND ${CMAKE_COMMAND} -E copy_if_different
   ${STREAMINGCLIENT_DIR}/lib/${ARCH_DIR}/libssl.so.3
-  ${CMAKE_BINARY_DIR}/operators/streaming_client/libssl.so.3
+  ${CMAKE_BINARY_DIR}/operators/video_streaming_client/libssl.so.3
   COMMAND ${CMAKE_COMMAND} -E copy_if_different
   ${STREAMINGCLIENT_DIR}/lib/${ARCH_DIR}/libcrypto.so.3
-  ${CMAKE_BINARY_DIR}/operators/streaming_client/libcrypto.so.3
+  ${CMAKE_BINARY_DIR}/operators/video_streaming_client/libcrypto.so.3
   COMMAND ${CMAKE_COMMAND} -E copy_if_different
   ${STREAMINGCLIENT_DIR}/lib/${ARCH_DIR}/libcudart.so.12.0.107
-  ${CMAKE_BINARY_DIR}/operators/streaming_client/libcudart.so.12.0.107
+  ${CMAKE_BINARY_DIR}/operators/video_streaming_client/libcudart.so.12.0.107
   COMMAND ${CMAKE_COMMAND} -E copy_if_different
   ${STREAMINGCLIENT_DIR}/lib/${ARCH_DIR}/libcudart.so.12
-  ${CMAKE_BINARY_DIR}/operators/streaming_client/libcudart.so.12
+  ${CMAKE_BINARY_DIR}/operators/video_streaming_client/libcudart.so.12
   # Copy libraries to the main lib directory as well
   COMMAND ${CMAKE_COMMAND} -E make_directory
   ${CMAKE_BINARY_DIR}/lib
@@ -168,8 +168,8 @@ add_custom_command(TARGET streaming_client POST_BUILD
 )
 
 # Install the operator shared library
-install(TARGETS streaming_client
-  EXPORT streaming_client-targets
+install(TARGETS video_streaming_client
+  EXPORT video_streaming_client-targets
   LIBRARY DESTINATION lib
   ARCHIVE DESTINATION lib
   RUNTIME DESTINATION bin
@@ -179,7 +179,7 @@ install(TARGETS streaming_client
 # Install headers
 install(
   FILES
-    streaming_client.hpp
+    video_streaming_client.hpp
     ${STREAMINGCLIENT_DIR}/include/StreamingClient.h
     ${STREAMINGCLIENT_DIR}/include/VideoFrame.h
   DESTINATION
@@ -250,31 +250,31 @@ if(EXISTS ${STREAMINGCLIENT_DIR}/lib/${ARCH_DIR}/libcudart.so)
 endif()
 
 # Export the targets for use by other projects
-install(EXPORT streaming_client-targets
-  FILE streaming_client-targets.cmake
+install(EXPORT video_streaming_client-targets
+  FILE video_streaming_client-targets.cmake
   NAMESPACE holoscan::ops::
-  DESTINATION lib/cmake/streaming_client
+  DESTINATION lib/cmake/video_streaming_client
 )
 
 # Create a config file for the package
 include(CMakePackageConfigHelpers)
 write_basic_package_version_file(
-  "${CMAKE_CURRENT_BINARY_DIR}/streaming_client-config-version.cmake"
+  "${CMAKE_CURRENT_BINARY_DIR}/video_streaming_client-config-version.cmake"
   VERSION 1.0.0
   COMPATIBILITY AnyNewerVersion
 )
 
 configure_package_config_file(
-  "${CMAKE_CURRENT_SOURCE_DIR}/streaming_client-config.cmake.in"
-  "${CMAKE_CURRENT_BINARY_DIR}/streaming_client-config.cmake"
-  INSTALL_DESTINATION lib/cmake/streaming_client
+  "${CMAKE_CURRENT_SOURCE_DIR}/video_streaming_client-config.cmake.in"
+  "${CMAKE_CURRENT_BINARY_DIR}/video_streaming_client-config.cmake"
+  INSTALL_DESTINATION lib/cmake/video_streaming_client
 )
 
 install(FILES
-  "${CMAKE_CURRENT_BINARY_DIR}/streaming_client-config.cmake"
-  "${CMAKE_CURRENT_BINARY_DIR}/streaming_client-config-version.cmake"
+  "${CMAKE_CURRENT_BINARY_DIR}/video_streaming_client-config.cmake"
+  "${CMAKE_CURRENT_BINARY_DIR}/video_streaming_client-config-version.cmake"
   "${CMAKE_CURRENT_SOURCE_DIR}/FindStreamingClient.cmake"
-  DESTINATION lib/cmake/streaming_client
+  DESTINATION lib/cmake/video_streaming_client
 )
 
 
